# crawler

./: .env.example  .gitignore  DEPENDENCIES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_MIGRATION_GUIDE.md  Dockerfile.minimal  Dockerfile.zeabur  LICENSE  MCP_SERVER_README.md  OPERATIONS_MANUAL.md  PHASE2_DEPLOYMENT_GUIDE.md  PROGRESS_TRACKING_GUIDE.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  TESTING_GUIDE.md  UI_PROGRESS_INTEGRATION_GUIDE.md  UI_TIMEOUT_ANALYSIS.md  ZEABUR_DEPLOYMENT.md  add_dual_track_status_columns.sql  add_monitoring_method.py  add_new_columns_to_existing_db.sql  alembic.ini  all_graphql_intercept_20250801_183513.json  all_graphql_intercept_20250806_194947.json  all_graphql_intercept_20250806_195437.json  analyze_all_cases.py  analyze_all_graphql.py  analyze_debug_files.py  analyze_page_structure.py  api_first_pipeline_results_20250804_000302.json  auth.json  business_data_extracted_20250805_163905.json  check_dependencies.py  check_failed_case.py  check_ports.sh  check_specific_urls.py  check_zeabur_readiness.py  cleanup_all_tasks.py  cleanup_test_tasks.py  (+278 more)
.streamlit/: config.toml
agents/: __init__.py
alembic/: env.py
common/: __init__.py  a2a.py  config.py  crawler_storage.py  csv_export_manager.py  db_client.py  folder_manager.py  history.py  image_primary_filter.py  incremental_crawl_manager.py  llm_client.py  llm_manager.py  llm_usage_recorder.py  mcp_client.py  models.py  nats_client.py  redis_client.py  rotation_pipeline.py  rustfs_client.py  settings.py  task_queue_manager.py  utils.py
config/: post_templates.json  reader-nginx.conf  reader.Dockerfile
database/: schema_planE.sql
docs/: CSV_IMPORT_COMPATIBILITY_FIX.md  CSV_IMPORT_STATE_FIX.md  CSV_PREVIEW_TEMPLATE_FIX.md  DEPLOYMENT_GUIDE.md  EXPORT_HANDLER_FIX.md  LLM_CLIENT_ARCHITECTURE.md  LLM_CODING_AGENT_SYSTEM_PROMPT.md  LLM代理故障修復對話流程.md  QUICK_REFERENCE.md  REDIS_DECODE_FIX.md  REDIS_FIX_SUMMARY.md  RUSTFS_AUTO_MANAGEMENT.md  STOP_LOGIC_FIX.md  SYNTAX_ERROR_FIX.md  TIME_CONVERSION_FIX.md  Threads混合爬蟲技術報告_最終解決方案.md  Threads爬蟲技術報告_完整解決方案.md  Threads爬蟲系統升級報告_2025年1月版.md  URL_COLLECTION_IMPROVEMENT.md  VISION_AGENT_REFACTOR.md
exports/: export_current_mjkenzy_16_20250805_172351.csv  user_posts_gvmonthly_20250804_164611.csv  user_posts_natgeo_20250804_163239.csv
extraction_results/: realtime_extraction_results_20250804_123141.json  realtime_extraction_results_20250804_123258.json  realtime_extraction_results_20250804_124422.json  realtime_extraction_results_20250804_124524.json  realtime_extraction_results_20250804_125423.json  realtime_extraction_results_20250804_125544.json  realtime_extraction_results_20250804_130712.json  realtime_extraction_results_20250804_130822.json  realtime_extraction_results_20250804_131328.json  realtime_extraction_results_20250804_131431.json  realtime_extraction_results_20250804_132736.json  realtime_extraction_results_20250804_132807.json  realtime_extraction_results_20250804_132844.json  realtime_extraction_results_20250804_133926.json  realtime_extraction_results_20250804_133956.json  realtime_extraction_results_20250804_134554.json  realtime_extraction_results_20250804_135220.json  realtime_extraction_results_20250804_135243.json  realtime_extraction_results_20250804_140335.json  realtime_extraction_results_20250804_140716.json  realtime_extraction_results_20250804_140957.json  realtime_extraction_results_20250804_141040.json  realtime_extraction_results_20250804_141135.json  realtime_extraction_results_20250804_142020.json  realtime_extraction_results_20250804_142909.json  realtime_extraction_results_20250804_161212.json  realtime_extraction_results_20250804_163216.json  realtime_extraction_results_20250804_164443.json  realtime_extraction_results_20250804_164600.json  realtime_extraction_results_20250804_170312.json  realtime_extraction_results_20250804_171627.json  realtime_extraction_results_20250804_172016.json  realtime_extraction_results_20250804_172040.json  realtime_extraction_results_20250804_172222.json  realtime_extraction_results_20250804_173038.json  realtime_extraction_results_20250804_173335.json  realtime_extraction_results_20250804_212332.json
mcp_server/: Dockerfile  __init__.py  main.py  models.py  server.py
pipeline_results/: pipeline_results_dcard.tw_20250724_191741.json  pipeline_results_starettoday_20250724_194048.json
playwright_results/: crawl_data_20250804_190310_76a9bbef.json  crawl_data_20250804_191727_90d11513.json  crawl_data_20250804_192910_da4eb88a.json  crawl_data_20250804_195154_d224df7d.json  crawl_data_20250804_212035_6224d658.json  crawl_data_20250804_212125_a7da5cad.json  crawl_data_20250804_212202_a814fa06.json  crawl_data_20250804_212208_6fe41300.json  crawl_data_20250804_212210_ca5936bf.json  crawl_data_20250804_212216_17c61699.json  crawl_data_20250804_212226_e4abfbfb.json  crawl_data_20250804_215606_b14cc08a.json  crawl_data_20250804_223924_36382bbb.json  crawl_data_20250804_232618_0e140d92.json  crawl_data_20250804_233006_f498fa56.json  crawl_data_20250804_234738_6d05e8ec.json  crawl_data_20250804_234744_ec895b2e.json  crawl_data_20250805_001733_7370facc.json  crawl_data_20250805_001741_e4e22f05.json  crawl_data_20250805_001742_e69bf3f5.json  crawl_data_20250805_001743_64c5ca2c.json  crawl_data_20250805_001747_e153a5c6.json  crawl_data_20250805_001750_903f3500.json  crawl_data_20250805_001822_10815023.json  crawl_data_20250805_004159_0b40c576.json  crawl_data_20250805_004204_8c33fb88.json  crawl_data_20250805_004217_83ec5722.json  crawl_data_20250805_004412_650597ce.json  crawl_data_20250805_011336_dc61d892.json  crawl_data_20250805_011343_11c1a937.json  crawl_data_20250805_011638_930d0326.json  crawl_data_20250805_011645_ae3e5d8e.json  crawl_data_20250805_011649_5ac7972a.json  crawl_data_20250805_011656_28e04f99.json  crawl_data_20250805_011701_0271db29.json  crawl_data_20250805_054510_f7a30fe7.json  crawl_data_20250805_054617_9b1307fb.json  crawl_data_20250805_054628_b99b6a95.json  crawl_data_20250805_054630_983127b9.json  crawl_data_20250805_054647_f3cca3f5.json  (+13 more)
scripts/: __init__.py  (+34 more)
(+281 files in other folders)
